demo website - fix errors

--- a/index.html
+++ b/index.html
@@ -4,24 +4,24 @@
 <head>
     <meta charset="utf-8">
     <title>.:Kiswar.org:.</title>
-    <base href="/">
+    <base href="https://kiswar-org.github.io/website/">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <link rel="icon" type="image/x-icon" href="favicon.ico">
+    <link rel="icon" type="image/x-icon" href="https://kiswar-org.github.io/website/favicon.ico">
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500&amp;display=swap" rel="stylesheet">
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
-    <link rel="manifest" href="manifest.webmanifest">
+    <link rel="manifest" href="https://kiswar-org.github.io/website/manifest.webmanifest">
     <meta name="theme-color" content="#1976d2">
     <script>
         document.title = '.:Kiswar:. \u{1F333}';
     </script>
     <link rel="stylesheet" href="https://unpkg.com/leaflet@1.5.1/dist/leaflet.css" integrity="sha512-xwE/Az9zrjBIphAcBb3F6JVqxf46+CDLwfLMHloNu6KEQCAWi6HcDUbeOfBIptF7tcCzusKFjFw2yuvEpDL9wQ==" crossorigin="" />
     <script src="https://unpkg.com/leaflet@1.5.1/dist/leaflet.js" integrity="sha512-GffPMF3RvMeYyc1LWMHtK8EbPv0iNZ8/oTtHPx9/cc2ILxQ+u905qIwdpULaqDkyBKgOaB57QTMg7ztg8Jm2Og==" crossorigin=""></script>
-    <script src="./assets/js/holder.js"></script>
-<link rel="stylesheet" href="styles.d4266309ae3d76a875bf.css"></head>
+    <script src="https://kiswar-org.github.io/website/assets/js/holder.js"></script>
+<link rel="stylesheet" href="https://kiswar-org.github.io/website/styles.d4266309ae3d76a875bf.css"></head>
 
 <body class="mat-typography">
     <app-root></app-root>
     <noscript>Habilite JavaScript para continuar usando esta aplicación.</noscript>
-<script src="runtime.3e90bc9bd4e62e478cc1.js" defer></script><script src="polyfills.c5de5b3b85b4e6db5ee9.js" defer></script><script src="scripts.5c763456757f15c27226.js" defer></script><script src="main.ac2719f44f639776b2a5.js" defer></script></body>
+<script src="https://kiswar-org.github.io/website/runtime.3e90bc9bd4e62e478cc1.js" defer></script><script src="https://kiswar-org.github.io/website/polyfills.c5de5b3b85b4e6db5ee9.js" defer></script><script src="https://kiswar-org.github.io/website/scripts.5c763456757f15c27226.js" defer></script><script src="https://kiswar-org.github.io/website/main.ac2719f44f639776b2a5.js" defer></script></body>
 
 </html>
